Make redirection only for target_clones (PR ipa/85329).

gcc/ChangeLog:

2018-04-11  Martin Liska  <mliska@suse.cz>

	PR ipa/85329
	* multiple_target.c (create_dispatcher_calls): Rename to ...
	(redirect_target_clone_callers): ... this.
	(expand_target_clones): Record created clones.
	(ipa_target_clone): Call redirect_target_clone_callers only
	for these clones.